--- a/portifolio/src/app/footer/footer.component.html
+++ b/portifolio/src/app/footer/footer.component.html
@@ -1,15 +1,9 @@
-<footer class="d-flex flex-column  bg-dark text-white text-center py-3">
+<footer class="footer mt-auto py-3" style="background-color:#16191db9; color: white; text-align: center; font-family: 'Times New Roman', Times, serif;">
   <div class="container">
-    <div class="social-links mb-3">
-      <a href="https://github.com/FabioCCamarg" target="_blank" class="text-white mx-2">
-        <i class="fa-brands fa-github fa-2x"></i>
-      </a>
-      <a href="https://www.linkedin.com/in/fabio-costa-camargo" target="_blank" class="text-white mx-2">
-        <i class="fa-brands fa-linkedin fa-2x"></i>
-      </a>
-      <p>Celular (15) 997306484</p>
+    <span>&copy; 2024 Seu Nome. Todos os direitos reservados.</span>
+    <div>
+      <a href="#" class="text-light">Privacidade</a> |
+      <a href="#" class="text-light">Termos</a>
     </div>
-    <p class="mb-0">© 2024 Fábio Costa Camargo. Todos os direitos reservados.</p>
   </div>
 </footer>
-
