--- a/portifolio/src/app/footer/footer.component.scss
+++ b/portifolio/src/app/footer/footer.component.scss
@@ -1,13 +1,14 @@
-footer {
-  position:absolute;
-  bottom: 0;
-  width: 100%;
+.footer {
+  background-color: #16191db9;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+}
+.footer a {
+  color: #fff;
+  text-decoration: none;
+}
+.footer a:hover {
+  text-decoration: underline;
 }
 
-.social-links a {
-  transition: color 0.3s ease;
-}
-
-.social-links a:hover {
-  color: #17a2b8; /* Cor azul de destaque ao passar o mouse */
-}
