--- a/portifolio/src/app/projects/projects.component.html
+++ b/portifolio/src/app/projects/projects.component.html
@@ -22,7 +22,7 @@
       </div>
       <div class="card-body text-center">
         <h5 class="card-title">Gerador de QRcode</h5>
-        <p class="card-text">Utilizado HTML5 e CSS3.</p>
+        <p class="card-text">Utilizado HTML, CSS e JS.</p>
         <button class="btn btn-primary" (click)="openModal('https://raw.githubusercontent.com/FabioCCamarg/portifolio/main/portifolio/src/assets/image/GeraQRCode.png')" data-bs-toggle="modal" data-bs-target="#myModal">Acessar</button>
       </div>
     </div>
@@ -35,7 +35,7 @@
       </div>
       <div class="card-body text-center">
         <h5 class="card-title">Gerador de Senha</h5>
-        <p class="card-text">Utilizado HTML5 e CSS3.</p>
+        <p class="card-text">Utilizado HTML, CSS e JS.</p>
         <button class="btn btn-primary" (click)="openModal('https://raw.githubusercontent.com/FabioCCamarg/portifolio/main/portifolio/src/assets/image/GeradorSenha.png')" data-bs-toggle="modal" data-bs-target="#myModal">Acessar</button>
       </div>
     </div>
@@ -48,7 +48,7 @@
       </div>
       <div class="card-body text-center">
         <h5 class="card-title">Site venda de iPhone</h5>
-        <p class="card-text">Utilizado HTML5 e CSS3.</p>
+        <p class="card-text">Utilizado HTML, CSS e JS.</p>
         <button class="btn btn-primary" (click)="openModal('https://raw.githubusercontent.com/FabioCCamarg/portifolio/main/portifolio/src/assets/image/Loja%20de%20vendas%20iPhone.png')" data-bs-toggle="modal" data-bs-target="#myModal">Acessar</button>
       </div>
     </div>
@@ -61,7 +61,7 @@
       </div>
       <div class="card-body text-center">
         <h5 class="card-title">Formulário</h5>
-        <p class="card-text">Utilizado HTML5 e CSS3.</p>
+        <p class="card-text">Utilizado HTML, CSS e JS.</p>
         <button class="btn btn-primary" (click)="openModal('https://raw.githubusercontent.com/FabioCCamarg/portifolio/main/portifolio/src/assets/image/PaginaForm.png')" data-bs-toggle="modal" data-bs-target="#myModal">Acessar</button>
       </div>
     </div>
@@ -74,7 +74,7 @@
       </div>
       <div class="card-body text-center">
         <h5 class="card-title">Calculadora</h5>
-        <p class="card-text">Utilizado HTML5 e CSS3.</p>
+        <p class="card-text">Utilizado HTML5, CSS e JS.</p>
         <button class="btn btn-primary" (click)="openModal('https://raw.githubusercontent.com/FabioCCamarg/portifolio/main/portifolio/src/assets/image/Tabuada.png')" data-bs-toggle="modal" data-bs-target="#myModal">Acessar</button>
       </div>
     </div>
@@ -86,7 +86,7 @@
       </div>
       <div class="card-body text-center">
         <h5 class="card-title">TODO</h5>
-        <p class="card-text">Utilizado HTML5 e CSS3.</p>
+        <p class="card-text">Utilizado HTML, CSS e JS.</p>
         <button class="btn btn-primary" (click)="openModal('https://raw.githubusercontent.com/FabioCCamarg/portifolio/main/portifolio/src/assets/image/Todo.png')" data-bs-toggle="modal" data-bs-target="#myModal">Acessar</button>
       </div>
     </div>
@@ -98,7 +98,7 @@
       </div>
       <div class="card-body text-center">
         <h5 class="card-title">Clone Página Login Instagram</h5>
-        <p class="card-text">Utilizado HTML5 e CSS3.</p>
+        <p class="card-text">Utilizado HTML, CSS e JS.</p>
         <button class="btn btn-primary" (click)="openModal('https://raw.githubusercontent.com/FabioCCamarg/portifolio/main/portifolio/src/assets/image/site.png')" data-bs-toggle="modal" data-bs-target="#myModal">Acessar</button>
       </div>
     </div>
